--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" href="favicon.ico">
   <title>素数ジェネレーター2</title>
   <script>
     function isPrime(num) {
