--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="https://scfcdv.github.io/homeweb2/favicon.ico">
   <title>素数ジェネレーター2</title>
   <script>
     function isPrime(num) {
